Implemented issue 54.